<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gerencia.pc.gerencia_u3.fragment.FormularioFragment"
    android:orientation="vertical">
    <TextView
        android:text="Categoria :"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView5"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:id="@+id/spinner_categorias"
        android:spinnerMode="dialog"
        android:prompt="@string/pront_catego"/>

    <TextView
        android:text="Reproducibilidad :"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/textView1"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:id="@+id/spinner_reprodu"
        android:spinnerMode="dialog"
        android:prompt="@string/pront_repro"
        android:entries="@array/spinner_reprodu"/>
    <TextView
        android:text="Severidad :"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView2"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:id="@+id/spinner_severidad"
        android:spinnerMode="dialog"
        android:prompt="@string/pront_seve"
        android:entries="@array/spinner_severida"/>
    <TextView
        android:text="Prioridad :"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView3"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:id="@+id/spinner_prioridad"
        android:spinnerMode="dialog"
        android:prompt="@string/pront_prio"
        android:entries="@array/spinner_prioridad"/>
    <TextView
        android:text="Asignar a:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView4"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:id="@+id/spinner_Asignar"
        android:spinnerMode="dialog"
        android:prompt="@string/pront_usu"/>
    <TextView
        android:text="Resumen(Titulo):"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView9"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/input_titulo"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:text="Pasos para Reproducir :"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView10"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/input_pasos_repro"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:text="Informacion Adicional :"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView11"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/input_info_adi"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"/>
    <Button
        android:text="REPORTAR INCIDENCIA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reportar_incidencia"
        android:theme="@style/EstiloBoton"
        android:layout_marginTop="10dp"/>
</LinearLayout>
